--- a/back-end/LMS-Backend/src/main/resources/application.yml
+++ b/back-end/LMS-Backend/src/main/resources/application.yml
@@ -3,10 +3,37 @@ spring:
     url: jdbc:mysql://localhost:3306/RD_Edu_LMS?createDatabaseIfNotExist=true
     username: root
     password: 12345
+#jpa:
+#  hibernate:
+#    ddl-auto: update
+#  show-sql: true
+#  properties:
+#    hibernate:
+#      format_sql: true
+#  servlet:
+#    multipart:
+#      max-file-size: 10MB
+#      max-request-size: 10MB
+#  mail:
+#    host: smtp.gmail.com
+#    port: 587
+#    username: "your_mail"
+#    password: "your code"
+#    properties:
+#      mail:
+#        smtp:
+#          auth: true
+#          starttls:
+#            enable: true
 
-  jpa:
-    hibernate:
-      ddl-auto: update
+#project:
+#  profile: profile/
+#
+#base:
+#  url: "http://localhost:8080"
+jpa:
+  hibernate:
+    ddl-auto: update
     show-sql: true
 
 
@@ -15,3 +42,9 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
+
+project:
+  profile: profile/
+
+base:
+  url: "http://localhost:8080"
