--- a/back-end/LMS-Backend/src/main/resources/application.yml
+++ b/back-end/LMS-Backend/src/main/resources/application.yml
@@ -1,39 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/RD_Edu_LMS?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/rd_edu_lms?createDatabaseIfNotExist=true
     username: root
     password: 12345
-#jpa:
-#  hibernate:
-#    ddl-auto: update
-#  show-sql: true
-#  properties:
-#    hibernate:
-#      format_sql: true
-#  servlet:
-#    multipart:
-#      max-file-size: 10MB
-#      max-request-size: 10MB
-#  mail:
-#    host: smtp.gmail.com
-#    port: 587
-#    username: "your_mail"
-#    password: "your code"
-#    properties:
-#      mail:
-#        smtp:
-#          auth: true
-#          starttls:
-#            enable: true
 
-#project:
-#  profile: profile/
-#
-#base:
-#  url: "http://localhost:8080"
-jpa:
-  hibernate:
-    ddl-auto: update
+  jpa:
+    hibernate:
+      ddl-auto: update
     show-sql: true
 
 
@@ -45,6 +18,7 @@ jpa:
 
 project:
   profile: profile/
+  thumbnail: thumbnail/
 
 base:
   url: "http://localhost:8080"
