--- a/LMS-UI/angular.json
+++ b/LMS-UI/angular.json
@@ -21,6 +21,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets" ,
               {
                 "glob": "**/*",
                 "input": "public"
@@ -79,6 +81,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+          
               {
                 "glob": "**/*",
                 "input": "public"
